07/07/2024 ADD: Se termino la página web con html y css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body class="bodyPage">
         <div class="headerMainBox">
-            
+
             <div class="boxFalseHeader">
                 <div class="headerPage">
                     <nav id="navbar">
@@ -53,22 +53,6 @@
                     <div class="boxHr" style="margin: 0;">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
     
                 <section class="main-section" id="Inicio">
@@ -89,22 +73,6 @@
                     <div class="boxHr" style="margin: 15px 0 15px 0;">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
 
                 <section class="main-section" id="Historia">
@@ -117,29 +85,13 @@
                                 <img src="https://media1.tenor.com/images/7b7b6f4801e23f0497cdd7cb02a3e1ad/tenor.gif?itemid=19047173" alt="El caballero oscuro" class="rounded">
                             </div>
                             <div class="boxChildText">
-                                <p>Hollow Knight, una aventura épica a través de un vasto reino de insectos y héroes que se encuentra en ruinas. Explora cavernas tortuosas, combate contra criaturas corrompidas y entabla amistad con extraños insectos, todo en un estilo clásico en 2D dibujado a mano.</p>
+                                <p>La historia de Hallownest es bastante complicada de formular. En el juego se sueltan pequeños fragmentos de historia, que hay que complementar con suposiciones. Esta podría ser una historia errónea, pero desde muchas fuentes de información se han recogido datos para redactar esto.</p>
                             </div>
                         </div>
                     </article>
                     <div class="boxHr">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
 
                 <section class="main-section" id="Personajes">
@@ -149,7 +101,7 @@
                     <article class="textMainPage" id="personajes">
                         <div>
                             <div class="boxChildTex">
-                                <p>Hollow Knight, una aventura épica a través de un vasto reino de insectos y héroes que se encuentra en ruinas. Explora cavernas tortuosas, combate contra criaturas corrompidas y entabla amistad con extraños insectos, todo en un estilo clásico en 2D dibujado a mano.</p>
+                                <p>En el misterioso y envolvente mundo de Hollow Knight, los personajes juegan un papel fundamental en la narrativa y la experiencia de juego. Cada uno de ellos tiene su propia historia, personalidad y relación con el vasto reino de Hallownest.</p>
                             </div>
                             <div style="display: flex; flex-direction: column; gap: 25px;">
                                 <h2 style="text-align: center; font-weight: 400;">
@@ -709,22 +661,6 @@
                     <div class="boxHr">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
 
                 <section class="main-section" id="Mapa">
@@ -746,22 +682,6 @@
                     <div class="boxHr">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
 
                 <section class="main-section" id="Habilidades">
@@ -769,7 +689,7 @@
                         Habilidades
                     </header>
                     <article class="textMainPage" id="habilidades">
-                        <p>Hollow Knight, una aventura épica a través de un vasto reino de insectos y héroes que se encuentra en ruinas. Explora cavernas tortuosas, combate contra criaturas corrompidas y entabla amistad con extraños insectos, todo en un estilo clásico en 2D dibujado a mano.</p>
+                        <p>Los hechizos son habilidades que el Caballero púede activar ya sea manteniendo oprimido LANZAR HECHIZO (Concentración) o tocando LANZAR HECHIZO o HECHIZO RÁPIDO mientras está neutral (Espíritu vengativo/Alma sombría) o mientras se mantiene oprimido ARRIBA (Espectros Aulladores/Chillido del Abismo) o ABAJO (Salto desolador/Oscuridad descendente).</p>
                         <div class="habilityTable">
                             <div>
                                 <div class="eachElementOfHabilityTable">
@@ -913,28 +833,8 @@
                     <div class="boxHr">
                         <hr/>
                     </div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <code></code><code></code><code></code><code></code><code></code>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
                 </section>
             </main>
         </div>
-
-        <footer>
-
-        </footer>
     </body>
 </html>
